--- a/block-BJaaef/code/style.css
+++ b/block-BJaaef/code/style.css
@@ -1,21 +1,62 @@
 * {
   box-sizing: border-box;
+  margin: 0;
 }
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    background-color: #F3F4F8;
 }
+
 .container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-  grid-gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 20px;
+  max-width: 1200px;
+  margin: 30px auto;
 }
 .box {
   border: 2px solid #d6bcfa;
   height: 500px;
   border-radius: 10px;
 }
-h1,
+p,
 h2 {
   text-align: center;
+}
+
+.flex {
+  display: flex;
+  align-items: center;
+}
+.flex h2 {
+  margin-left: 13px;
+}
+.flex img {
+  border-radius: 50%;
+  border: 2px solid #4964E8;
+}
+.card p {
+  margin: 13px 0;
+}
+a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #E7EDFD;
+  color: #4964E8;
+  padding: 8px;
+  border-radius: 4px;
+}
+.card {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 3px 5px 5px 1px #CFD8E1 ;
+}
+header {
+  background-color: #4964E8;
+  color: white;
+  text-align: center;
+  padding: 30px 0;
 }
