--- a/block-BJaaeh/code/style.css
+++ b/block-BJaaeh/code/style.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  margin: 0;
 }
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
@@ -18,4 +19,32 @@ body {
 h1,
 h2 {
   text-align: center;
+}
+/* main */
+img {
+  width: 100%;
+  height: 750px;
+  object-fit: cover;
+}
+.clock {
+  color: #66ff99;
+  font-size: 56px;
+  text-align: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  position: absolute;
+  top: 8%;
+  left: 42%;
+  transform: rotate(25deg);
+}
+.clock2 {
+  color: #e64211;
+  font-size: 30px;
+  text-align: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  position: absolute;
+  top: 20%;
+  right: 11%;
+  transform: rotate(-32deg);
 }
